test/spec/marybeth/expstmt.good
Non-zero value.  Continuing.
expstmt.chpl:9: error: halt reached - Value is zero.
